--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,24 +9,39 @@
     android:background="@color/alert_parent_background"
     tools:context=".MainActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <AutoCompleteTextView
+            android:id="@+id/select_symbol"
+            android:layout_width="140dp"
+            android:layout_height="50dp"
+            android:text="BTCUSDT"
+            android:textSize="21dp"
+            android:fontFamily="@font/lato"
+            android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
+            android:textColor="#FFFFFF"
+            android:background="@null"
+            android:layout_centerHorizontal="true"/>
+
+        <Button
+            android:id="@+id/menu_btn"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/menu_icon" />
+
+    </RelativeLayout>
+
+
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-      <AutoCompleteTextView
-          android:id="@+id/select_symbol"
-          android:layout_width="140dp"
-          android:layout_height="50dp"
-          android:text="BTCUSDT"
-          android:textSize="21dp"
-          android:fontFamily="@font/lato"
-          android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
-          android:textColor="#FFFFFF"
-          android:gravity="center"
-          android:layout_gravity="center"
-          android:background="@null"/>
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <TextView
             android:id="@+id/variable_price"
             android:layout_width="200dp"
