--- a/app/src/main/res/drawable/alert_btn_back.xml
+++ b/app/src/main/res/drawable/alert_btn_back.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/fade_background" />
-
+            <solid android:color="@color/alert_parent_background" />
+            <stroke android:width="1dp" android:color="#ffffff" />
         </shape>
 
     </item>
