--- a/app/src/main/res/drawable/alert_price_back.xml
+++ b/app/src/main/res/drawable/alert_price_back.xml
@@ -2,9 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-    <solid android:color="#333233"/>
-        <stroke android:width="1dp"
-            android:color="#FDFDFD"/>
+    <solid android:color="@color/fade_background" />
+        <stroke android:width="1dp" android:color="#FED7E9" />
     </shape>
 
 </item>
