--- a/app/src/main/res/drawable/ic_arrow_drop_down_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_arrow_drop_down_black_24dp.xml
@@ -1,5 +1,11 @@
-<vector android:alpha="0.92" android:height="34dp"
-    android:tint="#F2DA07" android:viewportHeight="24.0"
-    android:viewportWidth="24.0" android:width="34dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M7,10l5,5 5,-5z"/>
+<vector android:alpha="0.92"
+    android:height="34dp"
+    android:tint="@color/alert_price_background"
+    android:viewportHeight="24.0"
+    android:viewportWidth="24.0"
+    android:width="34dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M7,10l5,5 5,-5z" />
 </vector>
