--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,10 @@
     <color name="colorPrimary">#666567</color>
     <color name="colorPrimaryDark">#2A292C</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="Alert_btn">#FFC107</color>
-    <color name="text_color">#7E7D7A</color>
-    <color name="alert_parent_background">#212022</color>
+    <color name="Alert_btn">#FED7E9</color>
+    <color name="text_color">#FFFFFF</color>
+    <color name="alert_parent_background">#510F40</color>
+    <color name="alert_price_background">#FED7E9</color>
+    <color name="fade_background">#671352</color>
+
 </resources>
