--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#666567</color>
     <color name="colorPrimaryDark">#2A292C</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="Alert_btn">#FFC107</color>
-    <color name="text_color">#7E7D7A</color>
+    <color name="Alert_btn">#F2DA07</color>
+    <color name="text_color">#FAF9F7</color>
     <color name="alert_parent_background">#212022</color>
 </resources>
